--- a/TenderInfo/Views/Account/EditAccountFrame.cshtml
+++ b/TenderInfo/Views/Account/EditAccountFrame.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "招标管理台账--框架";
 }
 <style>
     td {
@@ -444,7 +445,7 @@
         <div class="container-fluid">
             <div class="form-horizontal">
                 <form id="EditAccountForm" method="post" enctype="multipart/form-data">
-                    <input id="tbxAccountIDEdit" name="tbxAccountIDEdit" type="text" value="@ViewBag.id" />
+                    <input id="tbxAccountIDEdit" name="tbxAccountIDEdit" type="text" class="hidden" value="@ViewBag.id" />
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
