--- a/TenderInfo/Views/Account/SearchInfo.cshtml
+++ b/TenderInfo/Views/Account/SearchInfo.cshtml
@@ -31,7 +31,7 @@
                     <option value="三次失败转谈判">三次失败转谈判</option>
                     <option value="四次成功">四次成功</option>
                     <option value="四次失败">四次失败</option>
-                    <option value="四次失败">四次失败</option>
+                    <option value="四次失败转谈判">四次失败转谈判</option>
                     <option value="终止">终止</option>
                 </select>
             </div>
