--- a/TenderInfo/Views/SampleDelegation/Input.cshtml
+++ b/TenderInfo/Views/SampleDelegation/Input.cshtml
@@ -186,7 +186,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="tbxEditTenderDate">修改招标开始时间<span class="text-danger">(必填)</span></label>
-                                        <input type="text" class="form-control date" id="tbxEditTenderDate" name="tbxEditTenderDate" placeholder="修改招标开始时间">
+                                        <input type="text" class="form-control" id="tbxEditTenderDate" name="tbxEditTenderDate" placeholder="修改招标开始时间">
                                     </div>
                                 </div>
                             </div>
