--- a/TenderInfo/Views/UserInfo/Index.cshtml
+++ b/TenderInfo/Views/UserInfo/Index.cshtml
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="box-body">
-                <iframe style="width:100%;border:none;height:600px;" src="/Dept/iFrameDeptTree" id="iFrameLeftDept" name="LeftDept"></iframe>
+                <iframe style="border:none;height:600px;" src="/Dept/iFrameDeptTree" id="iFrameLeftDept" name="LeftDept"></iframe>
             </div>
         </div>
     </div>
